js-version/sexpr/gen/SExprParser.js
// Generated from /Users/shenyin.sy/projects/myLisp/js-version/sexpr/SExpr.g4 by ANTLR 4.7
// jshint ignore: start
var antlr4 = require('antlr4/index');
var SExprVisitor = require('./SExprVisitor').SExprVisitor;

var grammarFileName = "SExpr.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'('", "')'", null, null, "'*'", "'/'", "'+'", 
                     "'-'" ];

var symbolicNames = [ null, null, null, "NUMBER", "OPERATOR", "MUL", "DIV", 
                      "ADD", "SUB", "WS" ];

var ruleNames =  [ "lispy", "expr", "sexpr" ];

function SExprParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

SExprParser.prototype = Object.create(antlr4.Parser.prototype);
SExprParser.prototype.constructor = SExprParser;

Object.defineProperty(SExprParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

SExprParser.EOF = antlr4.Token.EOF;
SExprParser.T__0 = 1;
SExprParser.T__1 = 2;
SExprParser.NUMBER = 3;
SExprParser.OPERATOR = 4;
SExprParser.MUL = 5;
SExprParser.DIV = 6;
SExprParser.ADD = 7;
SExprParser.SUB = 8;
SExprParser.WS = 9;

SExprParser.RULE_lispy = 0;
SExprParser.RULE_expr = 1;
SExprParser.RULE_sexpr = 2;

function LispyContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SExprParser.RULE_lispy;
    return this;
}

LispyContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LispyContext.prototype.constructor = LispyContext;

LispyContext.prototype.expr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExprContext);
    } else {
        return this.getTypedRuleContext(ExprContext,i);
    }
};

LispyContext.prototype.accept = function(visitor) {
    if ( visitor instanceof SExprVisitor ) {
        return visitor.visitLispy(this);
    } else {
        return visitor.visitChildren(this);
    }
};




SExprParser.LispyContext = LispyContext;

SExprParser.prototype.lispy = function() {

    var localctx = new LispyContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, SExprParser.RULE_lispy);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 9;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << SExprParser.T__0) | (1 << SExprParser.NUMBER) | (1 << SExprParser.OPERATOR))) !== 0)) {
            this.state = 6;
            this.expr();
            this.state = 11;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ExprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SExprParser.RULE_expr;
    return this;
}

ExprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExprContext.prototype.constructor = ExprContext;

ExprContext.prototype.NUMBER = function() {
    return this.getToken(SExprParser.NUMBER, 0);
};

ExprContext.prototype.OPERATOR = function() {
    return this.getToken(SExprParser.OPERATOR, 0);
};

ExprContext.prototype.sexpr = function() {
    return this.getTypedRuleContext(SexprContext,0);
};

ExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof SExprVisitor ) {
        return visitor.visitExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};




SExprParser.ExprContext = ExprContext;

SExprParser.prototype.expr = function() {

    var localctx = new ExprContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, SExprParser.RULE_expr);
    try {
        this.state = 15;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case SExprParser.NUMBER:
            this.enterOuterAlt(localctx, 1);
            this.state = 12;
            this.match(SExprParser.NUMBER);
            break;
        case SExprParser.OPERATOR:
            this.enterOuterAlt(localctx, 2);
            this.state = 13;
            this.match(SExprParser.OPERATOR);
            break;
        case SExprParser.T__0:
            this.enterOuterAlt(localctx, 3);
            this.state = 14;
            this.sexpr();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SexprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SExprParser.RULE_sexpr;
    return this;
}

SexprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SexprContext.prototype.constructor = SexprContext;

SexprContext.prototype.expr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExprContext);
    } else {
        return this.getTypedRuleContext(ExprContext,i);
    }
};

SexprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof SExprVisitor ) {
        return visitor.visitSexpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};




SExprParser.SexprContext = SexprContext;

SExprParser.prototype.sexpr = function() {

    var localctx = new SexprContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, SExprParser.RULE_sexpr);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 17;
        this.match(SExprParser.T__0);
        this.state = 21;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << SExprParser.T__0) | (1 << SExprParser.NUMBER) | (1 << SExprParser.OPERATOR))) !== 0)) {
            this.state = 18;
            this.expr();
            this.state = 23;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 24;
        this.match(SExprParser.T__1);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


exports.SExprParser = SExprParser;
